# cast

./: .gitignore  Cargo.toml  README.md
crates/cast-font-tool/: Cargo.toml  README.md
crates/cast-font-tool/src/: main.rs
crates/cast-gallery/: Cargo.toml
crates/cast-gallery/src/: main.rs
crates/cast-gallery/src/patterns/: README.md  command_palette.rs  entity_table_with_details.rs  mod.rs  related_activity.rs  shell.rs
crates/cast-ui/: Cargo.toml
crates/cast-ui/assets/fonts/google-sans/: SOURCE.txt
crates/cast-ui/src/: color.rs  foundation.rs  lib.rs  style.rs
crates/cast-ui/src/components/: agent.rs  alert.rs  avatar.rs  badge.rs  button.rs  calendar.rs  card.rs  carousel.rs  checkbox.rs  dialog.rs  disclosure.rs  empty_state.rs  filter_bar.rs  form.rs  kbd.rs  label.rs  layout.rs  link.rs  list.rs  markdown.rs  menu.rs  mod.rs  navigation.rs  panel.rs  popover.rs  progress.rs  report.rs  separator.rs  skeleton.rs  slider.rs  switch.rs  text_input.rs  toast.rs  tooltip.rs
crates/cast-ui/src/theme/: mod.rs
crates/eframe-baseline/: Cargo.toml
crates/eframe-baseline/src/: main.rs
docs/: components.md  getting-started.md  patterns.md  tokens.md
scripts/: bench-memory.sh  bench-smaps-breakdown.sh
