[workspace]
members = [
    "crates/cast-ui",
    "crates/cast-gallery",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.93"

[workspace.dependencies]
cast = { package = "cast-ui", path = "crates/cast-ui" }
eframe = "0.34.2"
egui = "0.34.2"
palette = { version = "0.7.6", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
